@@ -4,6 +4,7 @@ o AFM and glyphlists loaded from compressed sources
 o Environment variable CAMLPDF_REPRODUCIBLE_IDS
 o Effectively make stderr unbuffered for all output
 o A dictionary entry with null for its value now does not exist
+o A missing mediabox now not fatal - we use the most-recenty seen
 
 2.4 (June 2021)
 
